--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,23 +3,29 @@
 :root {
     --white-color: #fff;
     --black-color: #000;
-    --primary-color-gr :#2e8b8d;
-    --primary-color-yl :#e8ae98;
+    --primary-color-gr: #2e8b8d;
+    --primary-color-yl:
+        /* #e8ae98 */
+        #222;
     --text-color: #333;
+    font-size: 16px;
 }
 
 * {
+    box-sizing: border-box;
+    transition: .25s;
+}
+*::before, *::after {
     box-sizing: inherit;
 }
 
 html {
     /* Đặt 1 tiêu chuẩn chuyển  px -> rem */
-    font-size: 62.5%; 
     /* Đặt độ cao chữ */
     line-height: 1.6rem;
     /* Nhúng font chữ */
     font-family: 'Poppins', sans-serif;
-    font-family: 'Roboto', sans-serif;  
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 
 }
@@ -27,7 +33,9 @@ html {
 /* Hỗ trợ khi responsive */
 .grid {
     /* width: 800px; */
-    width: 1200px;
+    /* width: 1200px; */
+    width: calc(100% - 4rem);
+    max-height: 100%;
     max-width: 100%;
     margin: 0 auto;
 }
