--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,90 +1,107 @@
 /* File main : riêng */
-.main {
-
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 1rem;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-items: center;
+    align-items: center;
+    align-self: center;
 }
 /* Header Start */
 .header {
-    height: 120px;
-    /* background-color: #2e8b8d; */
-    background-image: linear-gradient(0 ,#2e8b8d,#0c4344 );
-}   
+    height: 10vh;
+    min-height: 4rem;
+    background-color: #fff;
+    /* background-image: linear-gradient(0, #2e8b8d, #0c4344); */
+    box-shadow: 0 4px 4px #00000050;
+}
 
-.header__navbar {
-    display: flex;
-    justify-content: space-between;
+.full-height {
+    height: 100%;
+}
+
+.navbar {
+    height: 100%;
+    width: 50%;
 }
 
 .logo-header {
     width: 120px;
-    margin: 0 32px 32px;
 }
 
-.header__navbar-form-menu {
-    margin-top: 32px;
-    
+.navbar-list {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
 }
 
-.header__navbar-list {
-   list-style: none;
-   padding-left: 0;
-   padding: 0 16px;
-   display: flex;
-}
-
-.wrap-register, 
-.wrap-login {
-    padding: 4px 8px;
-    border-style: ridge;
-    border-radius: 30px;
-    font-size: 20px;
-    text-align: center;
-     background-color: rgba(3, 63, 44, 0.7); 
-     background-color: transparent; 
-}
-
-.wrap-register:hover, 
-.wrap-login:hover {
-    box-shadow: 0 0 2px #ffc000,
-                0 0 3px #ffc000,
-                0 0 5px #ffc000; 
-}
-
-.header__navbar-item {
-    margin: 0 8px;
-    position: relative;
-}
-
-.header__navbar-icon {
-
-}
-
-.header__navbar-item,
-.header__navbar-item-link {
+.navbar-list>li {
     display: inline-block;
-    font-size: 1.6rem;
-    text-decoration: none;
-    color:var(--primary-color-yl);
-    font-weight: 400;
+    height: 100%;
+    width: 100%;
 }
-
-.header__navbar-item:hover,
-.header__navbar-item-link:hover {
-    color: rgba(255, 255, 255, 0.7);
+.navbar-list a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding-top: 1.5em;
+    text-align: center;
+    text-decoration: none;
+    color: var(--primary-color-yl);
+    font-weight: 400;
     cursor: pointer;
 }
-
-.header__navbar-item--B {
-    font-weight: 500;    
+.navbar-list a:hover {
+    background-color: #2e8b8d33;
+    color: #0c4344;
+    outline: 2px solid #0c4344;
 }
 
-/* Đăng kí / đăng nhập */
-.header__navbar-form-log-reg {
-    margin-top: 20px;
+/* outlined button recommended setting: <button class="btn color-blue bordered-xxs pad-sm rounded-xs">Button</button> */
+/* filled button recommended setting: <button class="btn filled color-blue pad-sm rounded-xs">Button</button> */
+.btn:not(:disabled) {
+    background-color: transparent;
+    padding: .325em 1em;
+    user-select: none;
+    border-radius: .25em;
 }
 
-/* Header end */
-.container {
+.btn:not(:disabled):hover {
+    cursor: pointer;
+    background-color: #2e8b8d33
+}
 
+.btn:not(:disabled):active {
+    color: #fff !important;
+    background-color: #0c4344
+}
+
+.btn:not(:disabled):focus {
+    outline: 1px solid #0c4344
+}
+
+.btn.btn-filled:not(:disabled) {
+    background-color: #2e8b8d;
+    color: #fff;
+    border: none
+}
+
+.btn.btn-filled:not(:disabled):hover {
+    background-color: #0c4344;
+    outline: 2px solid #0c4344
+}
+
+.btn.btn-filled:not(:disabled):focus {
+    outline: .25em solid #2e8b8d33
+}
+
+.btn.btn-filled:not(:disabled):active {
+    background-color: #0c4344
 }
 
 .footer {
@@ -100,8 +117,8 @@
 }
 
 .footer__heading {
-    font-size: 1.6rem;   
-    text-transform: uppercase; 
+    font-size: 1.6rem;
+    text-transform: uppercase;
     padding: 4px 0;
     display: block;
 }
@@ -127,6 +144,3 @@
     font-size: 1.4rem;
     min-height: 32px;
 }
-
-
-
