--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,9 @@
     align-items: center;
     align-self: center;
 }
+.icon {
+    margin-right: 0.5rem;
+}
 /* Header Start */
 .header {
     height: 10vh;
@@ -53,7 +56,7 @@
     text-align: center;
     text-decoration: none;
     color: var(--primary-color-yl);
-    font-weight: 400;
+    font-weight: 700;
     cursor: pointer;
 }
 .navbar-list a:hover {
