--- a/logincss.css
+++ b/logincss.css
@@ -49,7 +49,7 @@ body {
 }
 
 .form .input-field {
-    background-color: var(--primary-color-yl);
+    /* background-color: var(--primary-color-yl); */
     position: relative;
     height: 50px;
     width: 100%;
