--- a/logincss.css
+++ b/logincss.css
@@ -49,7 +49,6 @@ body {
 }
 
 .form .input-field {
-    /* background-color: var(--primary-color-yl); */
     position: relative;
     height: 50px;
     width: 100%;
@@ -66,6 +65,10 @@ body {
     font-size: 15px;
     border-bottom: 2px solid var(--primary-color-yl);
     border-top: 2px solid transparent;
+}
+
+.input-field :not(input[type='submit']):focus {
+    border-bottom: 2px solid var(--primary-color-gr);
 }
 
 .input-field i {
@@ -85,15 +88,14 @@ body {
 .checkbox-text .checkbox-content {
     display: flex;
     align-items: center;
+    cursor: pointer;
+    user-select: none;
 }
 
-.checkbox-content input {
+.checkbox-content input[type='checkbox'] {
     margin: 0 8px -2px 4px;
     accent-color: var(--primary-color-yl);
-}
-.checkbox-content input:hover,
-.checkbox-content label:hover {
-    cursor: pointer;
+    transform: scale(1.5) translateY(-10%);
 }
 
 .form .text {
@@ -109,26 +111,6 @@ body {
 .form a:hover {
     cursor: pointer;
     text-decoration: underline;
-}
-
-.form .button {
-    margin-top: 35px;
-}
-
-.form .button input {
-    border: none;
-    color: var(--primary-color-yl);
-    font-size: 16px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    border-radius: 6px;
-    background-color: var(--primary-color-gr);
-    cursor: pointer;
-    /* Làm thêm cái hiệu ứng khi hover vào */
-}
-
-.button input:hover {
-    background-color: var(--primary-color-gr);
 }
 
 .form .login-signup {
