--- a/logincss.css
+++ b/logincss.css
@@ -1,14 +1,3 @@
-* {
-    box-sizing: inherit;
-}
-
-html {
-    font-size: 62.5%;
-    line-height: 1.6rem;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
-}
-
 body {
     height: 100vh;
     display: flex;
@@ -21,9 +10,9 @@ body {
     position: relative;
     max-width: 430px;
     width: 100%;
-    border-radius: 5px;
+    border-radius: .5em;
     background-color: #fff;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 .5em 1em rgba(0, 0, 0, 0.33);
 }
 
 .container .form {
