--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,30 +7,35 @@
 }
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    justify-items: center;
     align-items: center;
-    align-self: center;
 }
 .icon {
-    margin-right: 0.5rem;
+    margin-right: 0.5em;
 }
 /* Header Start */
 .header {
+    position: sticky;
+    top: 0;
+    grid-template-columns: 1fr 2fr 1fr;
     height: 10vh;
     min-height: 4rem;
+    padding: 0 3rem;
     background-color: #fff;
-    /* background-image: linear-gradient(0, #2e8b8d, #0c4344); */
+    /* background-image: linear-gradient(0, var(--primary), var(--primary-dark)); */
     box-shadow: 0 4px 4px #00000050;
 }
 
 .full-height {
     height: 100%;
 }
-
-.navbar {
-    height: 100%;
-    width: 50%;
+.grid-child-right {
+    justify-self: right;
+}
+.grid-child-left {
+    justify-self: left;
+}
+.navbar-list {
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .logo-header {
@@ -55,14 +60,14 @@
     padding-top: 1.5em;
     text-align: center;
     text-decoration: none;
-    color: var(--primary-color-yl);
+    color: var(--text);
     font-weight: 700;
     cursor: pointer;
 }
 .navbar-list a:hover {
-    background-color: #2e8b8d50;
-    color: #0c4344;
-    outline: 2px solid #0c4344;
+    background-color: var(--primary-shadow);
+    color: var(--primary-dark);
+    outline: 2px solid var(--primary-dark);
 }
 
 /* outlined button recommended setting: <button class="btn color-blue bordered-xxs pad-sm rounded-xs">Button</button> */
@@ -77,42 +82,45 @@
 
 .btn:not(:disabled):hover {
     cursor: pointer;
-    background-color: #2e8b8d50
+    background-color: var(--primary-shadow)
 }
 
 .btn:not(:disabled):active {
     color: #fff !important;
-    background-color: #0c4344
+    background-color: var(--primary-dark)
 }
 
 .btn:not(:disabled):focus {
-    outline: 1px solid #0c4344
+    outline: 1px solid var(--primary-dark)
 }
 
 .btn.btn-filled:not(:disabled) {
-    background-color: #2e8b8d;
+    background-color: var(--primary);
     color: #fff;
     border: none
 }
 
 .btn.btn-filled:not(:disabled):hover {
-    background-color: #0c4344;
-    outline: 2px solid #0c4344
+    background-color: var(--primary-dark);
+    outline: 2px solid var(--primary-dark)
 }
 
 .btn.btn-filled:not(:disabled):focus {
-    outline: .25em solid #2e8b8d50
+    outline: .25em solid var(--primary-shadow)
 }
 
 .btn.btn-filled:not(:disabled):active {
-    background-color: #0c4344
+    background-color: var(--primary-dark)
 }
 
+.footer-container {
+    padding-top: 1rem;
+    border-top: 4px solid var(--secondary);
+    background-color: var(--primary);
+    color: var(--text);
+}
 .footer {
-    padding-top: 12px;
-    border-top: 4px solid var(--primary-color-yl);
-    background-color: var(--primary-color-gr);
-    color: var(--primary-color-yl);
+    columns: 3;
 }
 
 .footer_logo {
@@ -130,20 +138,20 @@
 .footer_socials {
     list-style: none;
     font-size: 1.6rem;
-    color: var(--primary-color-yl);
+    color: var(--text);
 }
 
 .footer_socials:hover {
     cursor: pointer;
 }
 
-.icon__socials {
-    color: var(--primary-color-yl);
+.icon__socials::before {
+    color: var(--text);
     padding: 4px 0;
 }
 
 .footer__more {
-    /* border-top: 4px solid var(--primary-color-yl); */
+    /* border-top: 4px solid var(--secondary); */
     text-align: center;
     font-size: 1.4rem;
     min-height: 32px;
