--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,4 +1,4 @@
-/* File Base :chung */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&family=Roboto:wght@100;300;400;500;700&display=swap');
 
 :root {
     --primary: #2e8b8d;
