--- a/logincss.css
+++ b/logincss.css
@@ -37,6 +37,15 @@ body {
     border-radius: 25px;
 }
 
+.error-message {
+    width: 100%;
+    margin-top: 2rem;
+    padding: .5em 1em;
+    border: 2px solid red;
+    border-radius: .5em;
+    background-color: #ff000033;
+}
+
 .form .input-field, .form *[type='submit'] {
     position: relative;
     height: 3rem;
