--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@
 .header {
     position: sticky;
     top: 0;
+    z-index: 1000;
     grid-template-columns: 1fr 2fr 1fr;
     height: 10vh;
     min-height: 4rem;
