--- a/source/css/main.css
+++ b/source/css/main.css
@@ -68,7 +68,11 @@
 .navbar-list a:hover {
     background-color: var(--primary-shadow);
     color: var(--primary-dark);
-    outline: 2px solid var(--primary-dark);
+    outline: 2px solid var(--primary);
+}
+.navbar-list a:disabled {
+    background-color: var(--primary);
+    color: #fff;
 }
 
 /* outlined button recommended setting: <button class="btn color-blue bordered-xxs pad-sm rounded-xs">Button</button> */
