--- a/formcss.css
+++ b/formcss.css
@@ -1,81 +1,92 @@
-
 body {
-    background-color: var(--primary-color-gr);
+    background-color: var(--primary);
 }
-/* Form thi */
-
-
-/* Form chọn */
-.select-menu {
-   width: 500px;
-   margin: 150px auto ;
+.container-sm {
+    height: 100%;
+    display: grid;
+    place-items: center;
 }
-
-.select-menu {
-    margin-left: 50%px;
-}
-.select-menu .select-btn {
-    display: flex;
-    height: 50px;
+.question-container {
+    width: 500px;
     background-color: #fff;
-    /* background-color: var(--primary-color-yl); */
-    padding: 20px;
-    font-size: 16px;
-    font-weight: 400;
-    border-radius: 5px;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+    padding: 1rem;
+    border-radius: .5rem;
+    box-shadow: 0 .25rem .5rem rgba(0, 0, 0, 0.5);
 }
 
-
-
-.select-btn i {
-    font-size: 20px;
+.question {
+    font-size: 1.25rem;
+    padding: 1rem;
+    box-shadow: 0 .25rem .5rem rgba(0, 0, 0, 0.5);
 }
-
-.select-menu .options {
+.answer-container {
+    padding: 1rem;
+}
+.answer-container input[type="radio"] {
+    opacity: 0;
+    position: absolute
+}
+.answer-container label {
     position: relative;
-    padding: 16px 0;
-    margin-top: 10px;
-    list-style: none;
-    font-size: 16px;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-    margin-bottom: 0;
+    width: 100%;
+    font-size: 1rem;
+    display: block;
+    margin: .5rem 0;
+    padding: .5rem 2rem;
+    border-radius: .5rem;
+    user-select: none;
+    cursor: pointer;
+    transition: .25s;
 }
 
+.answer-container label:hover {
+    background-color: var(--primary-shadow);
+}
+.answer-container label::before {
+    content: '';
+    position: absolute;
+    left: .75rem;
+    bottom: 45%;
+    border-radius: 50%;
+    border: 2px solid #333;
+    transform: scale(4);
+}
+.answer-container label::after {
+    content: '';
+    position: absolute;
+    left: .75rem;
+    bottom: 45%;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    transform: scale(3);
+}
+.answer-container input[type="radio"]:checked+label {
+    background-color: var(--primary);
+    color: #fff;
+    box-shadow: 0 .25rem .5rem var(--primary);
+}
+.answer-container input[type="radio"]:checked+label::after {
+    content: '\2713';
+    /* border: 2px solid var(--primary); */
+    border: none;
+    transform: scale(2);
+}
 
-.options .option {
+.exam-nav {
+    width: 100%;
+    margin: 1rem 0;
+    padding: .5rem;
     display: flex;
-    height: 55px;
-    padding: 0 16px;
-    cursor: pointer;
     align-items: center;
+    border-radius: .5rem;
+    box-shadow: 0 .25rem .5rem rgba(0, 0, 0, 0.5);
 }
-
-.options .option:hover {  
-    background-color: rgb(227, 221, 221);
-    /* border-radius: 3px; */
+.exam-nav :where(.btn-prev, .btn-next) {
+    box-shadow: 0 .25rem .5rem var(--primary);
 }
-/* End Form chọn */
-
-.select-menu .skip {
-    background-color: var(--primary-color-yl);
-    height: 60px;
-    padding: 20px;
-    margin-top: 8px;
-    border-radius: 5px;
-    align-items: center;
-    font-size: 20px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+.exam-nav .btn-prev {
+    margin-right: auto;
 }
-
-.btn-skip {
-    cursor: pointer;
-    /* border: none; */
-    background-color: var(--primary-color-yl);
-    margin-top: -3px;
-
+.exam-nav .btn-next {
+    margin-left: auto;
 }
