--- a/source/css/base.css
+++ b/source/css/base.css
@@ -6,6 +6,9 @@
     --primary-dark: #0c4344;
     --secondary: #e8ae98;
     --text-color: #333;
+
+    --red: #e74c3c;
+    --dark-red: #c0392b;
     font-size: 16px;
 }
 
