--- a/exam.css
+++ b/exam.css
@@ -1,18 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600');
 body {
     background-color: var(--primary);
 }
-.container-sm {
+.container {
     height: 100%;
     display: grid;
     place-items: center;
 }
 .question-container {
     position: relative;
-    width: 500px;
+    width: 50%;
+    min-width: 480px;
     background-color: #fff;
     padding: 1rem;
     border-radius: .5rem;
-    box-shadow: 0 .2rem .4rem #00000050, 0 0 .2rem #000000;
+    box-shadow: 0 .25rem .5rem #333, 0 0 .25rem #000;
 }
 .question-number {
     background-color: var(--secondary);
@@ -27,13 +29,16 @@ body {
 }
 
 .question {
+    font-family: 'Comfortaa', cursive;
     font-size: 1.25rem;
     padding: 1rem;
-    box-shadow: 0 .25rem .5rem rgba(0, 0, 0, 0.5);
+    /* border-top: 2px solid #aaa; */
+    /* border-bottom: 2px solid #aaa; */
+    /* box-shadow: 0 .2rem .4rem #66666650, 0 0 .2rem #333; */
 }
-.answer-container {
+/* .answer-container {
     padding: 1rem;
-}
+} */
 .answer-container input[type="radio"] {
     opacity: 0;
     position: absolute
@@ -74,8 +79,9 @@ body {
 }
 .answer-container input[type="radio"]:checked+label {
     color: var(--primary);
+    background-color: var(--primary-shadow);
     font-weight: 700;
-    outline: 2px solid var(--primary);
+    outline: 1px solid var(--primary-dark);
     transition: outline 0s;
 }
 .answer-container input[type="radio"]:checked+label::after {
@@ -115,21 +121,30 @@ body {
     }
 }
 
-.exam-nav {
+.exam-nav-container {
+    background-color: #fff;
     width: 100%;
-    margin: 1rem 0;
-    padding: .5rem;
+    height: max-content;
+    padding: 2rem;
+    margin: auto;
+    margin-top: 2rem;
+    border-top: 2px solid #333;
+}
+:where(.btn-prev, .btn-next) {
+    font-size: 1.25rem;
+    /* box-shadow: 0 .25rem .5rem var(--primary); */
+    box-shadow: 0 .2rem .4rem #66666650, 0 0 .2rem #333;
+}
+.nav-btn-container {
+    width: 50%;
+    min-width: 480px;
+    margin: auto;
     display: flex;
-    align-items: center;
-    border-radius: .5rem;
-    box-shadow: 0 .25rem .5rem rgba(0, 0, 0, 0.5);
+    justify-content: center;
 }
-.exam-nav :where(.btn-prev, .btn-next) {
-    box-shadow: 0 .25rem .5rem var(--primary);
-}
-.exam-nav .btn-prev {
+.btn-prev {
     margin-right: auto;
 }
-.exam-nav .btn-next {
+.btn-next {
     margin-left: auto;
 }
