--- a/source/css/exam.css
+++ b/source/css/exam.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans');
 body {
     background-color: var(--primary);
 }
@@ -12,9 +12,9 @@ body {
     width: 50%;
     min-width: 480px;
     background-color: #fff;
-    padding: 1rem;
+    padding: 1rem 2rem;
     border-radius: .5rem;
-    box-shadow: 0 .25rem .5rem #333, 0 0 .25rem #000;
+    box-shadow: 0 .5rem 1rem #333, 0 0 .5rem #ddd;
 }
 .question-number {
     background-color: var(--secondary);
@@ -29,16 +29,16 @@ body {
 }
 
 .question {
-    font-family: 'Comfortaa', cursive;
+    /* text-align: center; */
+    font-family: 'PT Sans', cursive;
     font-size: 1.25rem;
-    padding: 1rem;
-    /* border-top: 2px solid #aaa; */
-    /* border-bottom: 2px solid #aaa; */
+    padding: 1rem .5rem;
     /* box-shadow: 0 .2rem .4rem #66666650, 0 0 .2rem #333; */
 }
-/* .answer-container {
-    padding: 1rem;
-} */
+.answer-container {
+    font-family: 'PT Sans', cursive;
+    margin-bottom: 4rem;
+}
 .answer-container input[type="radio"] {
     opacity: 0;
     position: absolute
@@ -49,7 +49,7 @@ body {
     font-size: 1rem;
     display: block;
     margin: .5rem 0;
-    padding: 1rem 2rem;
+    padding: .75rem 2rem;
     border-radius: .5rem;
     user-select: none;
     cursor: pointer;
@@ -57,7 +57,7 @@ body {
 }
 
 .answer-container label:hover {
-    background-color: var(--primary-shadow);
+    background-color: #99999950;
 }
 .answer-container label::before {
     content: '';
@@ -81,7 +81,7 @@ body {
     color: var(--primary);
     background-color: var(--primary-shadow);
     font-weight: 700;
-    outline: 1px solid var(--primary-dark);
+    outline: 2px solid var(--primary);
     transition: outline 0s;
 }
 .answer-container input[type="radio"]:checked+label::after {
@@ -136,9 +136,7 @@ body {
     box-shadow: 0 .2rem .4rem #66666650, 0 0 .2rem #333;
 }
 .nav-btn-container {
-    width: 50%;
-    min-width: 480px;
-    margin: auto;
+    margin: 1.5rem auto 0;
     display: flex;
     justify-content: center;
 }
@@ -147,6 +145,9 @@ body {
 }
 .btn-next {
     margin-left: auto;
+}
+button[type='submit'] {
+    font-size: 1.25rem;
 }
 .question-table {
     max-width: 50%;
