--- a/source/css/main.css
+++ b/source/css/main.css
@@ -21,9 +21,11 @@
     height: 10vh;
     min-height: 4rem;
     padding: 0 3rem;
+    margin-bottom: .25rem;
     background-color: #fff;
     /* background-image: linear-gradient(0, var(--primary), var(--primary-dark)); */
     box-shadow: 0 4px 4px #00000050;
+    border-radius: 0 0 1rem 1rem;
 }
 
 .full-height {
