--- a/source/css/base.css
+++ b/source/css/base.css
@@ -41,6 +41,11 @@ hr {
     display: none;
 }
 
+.img-full {
+    width: 100%;
+    height: auto;
+}
+
 .container {
     max-width: calc(100% - 4rem);
     margin: 2rem auto;
