--- a/source/css/exam.css
+++ b/source/css/exam.css
@@ -1,6 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Cabin&family=Signika+Negative&family=Asap&family=Radio+Canada&family=Jost&family=Signika');
+
+:root {
+    --exam-font: 'Radio Canada', 'Signika', 'Jost', 'Asap', 'Signika Negative', 'Cabin', 'PT Sans', sans-serif;
+}
+
 body {
-    background-color: var(--primary);
+    background-color: var(--dark-white);
+}
+
+.container-lg {
+    width: 100%;
+    height: 100vh;
+    margin-left: 0;
+    margin-right: 0;
+    display: grid;
+    place-items: center end;
+    grid-template-columns: repeat(2, auto);
 }
 .container {
     height: 100%;
@@ -9,12 +24,12 @@ body {
 }
 .question-container {
     position: relative;
-    width: 50%;
+    width: 50vw;
     min-width: 480px;
-    background-color: #fff;
+    background-color: var(--white);
     padding: 1rem 2rem;
     border-radius: .5rem;
-    box-shadow: 0 .5rem 1rem #333, 0 0 .5rem #ddd;
+    box-shadow: 0 .25rem .5rem #333, 0 0 .25rem #666;
 }
 .question-number {
     background-color: var(--secondary);
@@ -28,15 +43,26 @@ body {
     font-weight: 700;
 }
 
+.txt-center {
+    text-align: center;
+}
+.txt-primary {
+    color: var(--primary-dark);
+}
+
 .question {
     /* text-align: center; */
-    font-family: 'PT Sans', cursive;
+    font-family: var(--exam-font);
     font-size: 1.25rem;
     padding: 1rem .5rem;
     /* box-shadow: 0 .2rem .4rem #66666650, 0 0 .2rem #333; */
 }
+.requirement {
+    font-family: var(--exam-font);
+    font-size: .825rem;
+}
 .answer-container {
-    font-family: 'PT Sans', cursive;
+    font-family: var(--exam-font);
     margin-bottom: 4rem;
 }
 .answer-container input[type="radio"] {
@@ -78,7 +104,7 @@ body {
     transform: scale(3);
 }
 .answer-container input[type="radio"]:checked+label {
-    color: var(--primary);
+    color: var(--primary-dark);
     background-color: var(--primary-shadow);
     font-weight: 700;
     outline: 2px solid var(--primary);
@@ -122,19 +148,63 @@ body {
 }
 
 .exam-nav-container {
-    background-color: #fff;
+    background-color: var(--white);
+    height: 100%;
+    max-height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    place-items: start center;
+}
+.header-container {
+    font-size: 1.25rem;
+    font-family: 'Signika', cursive;
     width: 100%;
-    height: max-content;
-    padding: 2rem;
+    text-align: center;
+}
+.header-container>header {
+    width: 100%;
+    padding: 1rem;
+    text-align: center;
+    color: var(--primary-dark);
+    background-color: var(--primary-shadow);
+    margin-bottom: 2rem;
+}
+button[type='submit'] {
+    width: calc(100% - 2rem);
+    margin: 0 1rem;
+}
+.question-table {
+    border-top: 2px solid var(--gray);
+    max-height: 100%;
+    overflow-y: auto;
     margin: auto;
-    margin-top: 2rem;
-    border-top: 2px solid #333;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    gap: 1rem;
+}
+.btn>i {
+    transition: inherit;
 }
 :where(.btn-prev, .btn-next) {
+    width: 20%;
     font-size: 1.25rem;
-    /* box-shadow: 0 .25rem .5rem var(--primary); */
-    box-shadow: 0 .2rem .4rem #66666650, 0 0 .2rem #333;
+    /* box-shadow: 0 .2rem .4rem #66666650, 0 0 .2rem #333; */
+    outline: 2px solid var(--primary);
+    box-shadow: 0 .25rem var(--gray);
+    transition: background-color 0s;
+    transition: color 0s;
+    transition: transform 0.05s;
 }
+:is(.btn-prev, .btn-next):focus {
+    outline: 2px solid var(--primary) !important;
+}
+:where(.btn-prev, .btn-next):active {
+    box-shadow: 0 0 var(--gray);
+    transform: translateY(7.5%);
+}
+
 .nav-btn-container {
     margin: 1.5rem auto 0;
     display: flex;
@@ -145,16 +215,4 @@ body {
 }
 .btn-next {
     margin-left: auto;
-}
-button[type='submit'] {
-    font-size: 1.25rem;
-}
-.question-table {
-    max-width: 75%;
-    margin: auto;
-    margin-top: 4rem;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-content: center;
-    gap: 1rem;
 }
