--- a/source/css/main.css
+++ b/source/css/main.css
@@ -86,6 +86,8 @@
     user-select: none;
     border-radius: .25em;
     text-decoration: none;
+    border: none;
+    color: var(--primary-dark);
 }
 
 .btn:not(:disabled):hover {
@@ -119,6 +121,50 @@
 
 .btn.btn-filled:not(:disabled):active {
     background-color: var(--primary-dark)
+}
+
+.btn.btn-lg {
+    font-size: 1.25rem;
+    padding: .5rem 1rem;
+    border-radius: .5rem;
+}
+
+.btn.btn-inactive:not(:disabled) {
+    background-color: var(--gray);
+    color: var(--white);
+    border: none
+}
+
+.btn.btn-inactive:not(:disabled):hover {
+    background-color: var(--dark-gray);
+    outline: 2px solid var(--gray)
+}
+
+.btn.btn-inactive:not(:disabled):focus {
+    outline: .25em solid var(--dark-white)
+}
+
+.btn.btn-inactive:not(:disabled):active {
+    background-color: var(--dark-gray)
+}
+
+.btn.btn-active:not(:disabled) {
+    background-color: var(--secondary);
+    color: var(--white);
+    border: none
+}
+
+.btn.btn-active:not(:disabled):hover {
+    background-color: var(--secondary-dark);
+    outline: 2px solid var(--secondary-shadow)
+}
+
+.btn.btn-active:not(:disabled):focus {
+    outline: .25em solid var(--secondary-shadow)
+}
+
+.btn.btn-active:not(:disabled):active {
+    background-color: var(--secondary-dark);
 }
 
 .footer-container {
