--- a/source/css/login-signup.css
+++ b/source/css/login-signup.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--primary);
+    background-color: var(--dark-white);
 }
 
 .form-container {
@@ -12,8 +12,8 @@ body {
     max-width: 430px;
     width: 100%;
     border-radius: .5em;
-    background-color: #fff;
-    box-shadow: 0 .5em 1em rgba(0, 0, 0, 0.33);
+    background-color: var(--white);
+    box-shadow: 0 .25rem .5rem #333, 0 0 .25rem #666;
 }
 
 .form-container .form {
@@ -21,7 +21,7 @@ body {
     padding: 30px;
 }
 
-.form-container .form .title {
+.form .title {
     position: relative;
     font-size: 27px;
     font-weight: 600;
@@ -39,10 +39,12 @@ body {
 }
 
 .form .error-message {
+    font-weight: 500;
     width: 100%;
     margin-top: 2rem;
     padding: .5em 1em;
-    border: 2px solid red;
+    border: 2px solid var(--red);
+    color: var(--red);
     border-radius: .5em;
     background-color: #ff000033;
 }
@@ -54,6 +56,9 @@ body {
     margin-top: 2rem;
 }
 .input-field input {
+    font-size: 1.5rem;
+    background-color: transparent;
+    font-family: var(--exam-font);
     position: absolute;
     height: 100%;
     width: 100%;
