--- a/source/css/exam.css
+++ b/source/css/exam.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Cabin&family=Signika+Negative&family=Asap&family=Radio+Canada&family=Jost&family=Signika');
-
-:root {
-    --exam-font: 'Radio Canada', 'Signika', 'Jost', 'Asap', 'Signika Negative', 'Cabin', 'PT Sans', sans-serif;
-}
-
 body {
     background-color: var(--dark-white);
 }
@@ -43,13 +37,6 @@ body {
     font-weight: 700;
 }
 
-.txt-center {
-    text-align: center;
-}
-.txt-primary {
-    color: var(--primary-dark);
-}
-
 .question {
     /* text-align: center; */
     font-family: var(--exam-font);
@@ -79,7 +66,7 @@ body {
     border-radius: .5rem;
     user-select: none;
     cursor: pointer;
-    transition: .25s;
+    transition: 0;
 }
 
 .answer-container label:hover {
@@ -108,7 +95,6 @@ body {
     background-color: var(--primary-shadow);
     font-weight: 700;
     outline: 2px solid var(--primary);
-    transition: outline 0s;
 }
 .answer-container input[type="radio"]:checked+label::after {
     transform: scale(1.5);
