--- a/source/css/main.css
+++ b/source/css/main.css
@@ -1,4 +1,435 @@
-/* File main : riêng */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&family=Roboto:wght@100;300;400;500;700&family=PT+Sans&family=Cabin&family=Signika+Negative&family=Asap&family=Radio+Canada&family=Jost&family=Signika&display=swap');
+:root {
+    --primary: #1abc9c
+        /*#2e8b8d*/
+    ;
+    --primary-shadow: #1abc9c33;
+    --primary-dark: #16a085;
+
+    --secondary: #f1c40f
+        /*#e8ae98*/
+    ;
+    --secondary-shadow: #f1c40f33;
+    --secondary-dark: #f39c12;
+    --text-color: #333;
+
+    --red: #e74c3c;
+    --dark-red: #c0392b;
+    --white: #ecf0f1;
+    --dark-white: #bdc3c7;
+    --gray: #95a5a6;
+    --dark-gray: #7f8c8d;
+    --black: #34495e;
+    --dark-black: #2c3e50;
+
+    --exam-font: 'Radio Canada', 'Signika', 'Jost', 'Asap', 'Signika Negative', 'Cabin', 'PT Sans', sans-serif;
+    --primary-font: 'Roboto', 'Poppins', sans-serif;
+
+    font-size: 16px;
+}
+
+* {
+    font-family: var(--primary-font);
+    box-sizing: border-box;
+    transition: .1s;
+}
+*::before, *::after {
+    box-sizing: inherit;
+}
+
+hr {
+    border: none;
+    border-top: 2px solid #77777750;
+    background-color: transparent;
+}
+
+.display-block {
+    display: block;
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.img-full {
+    width: 100%;
+    height: auto;
+}
+
+.txt-center {
+    text-align: center;
+}
+.txt-primary {
+    color: var(--primary-dark);
+}
+.txt-secondary {
+    color: var(--secondary-dark);
+}
+.txt-lg {
+    font-size: 1.1rem;
+}
+.txt-xl {
+    font-size: 1.25rem;
+}
+
+.container {
+    max-width: calc(100% - 4rem);
+    margin: 2rem auto;
+}
+
+.container-sm {
+    max-width: calc(100% - 16rem);
+    margin: 2rem auto;
+}
+.main {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 2rem;
+}
+.section {
+    /* border: 2px solid #33333375; */
+    overflow: hidden;
+    border-radius: 1rem;
+}
+.section-title {
+    width: 100%;
+    background-color: var(--primary);
+    color: #fff;
+    font-weight: 400;
+    font-size: 1.5rem;
+    padding: .5rem 1rem;
+    margin-top: 0;
+}
+.section-container {
+    background-color: var(--primary-shadow);
+    padding: 1rem;
+}
+.section-container {
+    display: grid;
+    gap: 1rem;
+}
+.card {
+    width: 100%;
+    padding: 1rem;
+    height: 33vh;
+    background-color: #fff;
+    border-radius: .5rem;
+    border: 2px solid #33333375;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr 3fr;
+}
+.card:hover {
+    transform: scale(1.005);
+    box-shadow: 0 .5rem .75rem var(--black), 0 0 .5rem var(--gray);
+}
+.card-media {
+    width: 150px;
+    height: 150px;
+    border-radius: .25rem;
+    object-fit: cover;
+    place-self: center;
+}
+.card-title {
+    margin: 0;
+    font-weight: 400;
+    font-size: 1.25rem;
+}
+.card-text {
+    position: relative;
+}
+.card-subtext {
+    border-top: 1px solid #33333375;
+    padding-top: 1rem;
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    height: min-content;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+.card-subtext :not(.btn) {
+    justify-self: left;
+}
+.card-subtext .btn {
+    justify-self: right;
+}
+.txt-wrapped {
+    -moz-box-orient: vertical;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+}
+.txt-wrapped.max-line-2 {
+    -webkit-line-clamp: 2
+}
+.txt-wrapped.max-line-3 {
+    -webkit-line-clamp: 3
+}
+.txt-wrapped.max-line-4 {
+    -webkit-line-clamp: 4
+}
+.txt-wrapped.max-line-5 {
+    -webkit-line-clamp: 5
+}
+
+/* Hỗ trợ khi responsive */
+.grid {
+    /* width: 800px; */
+    /* width: 1200px; */
+    width: calc(100% - 4rem);
+    max-height: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+/* Khi không muốn dùng w1k2px */
+.grid__full-width {
+    width: 100%;
+}
+
+/* Những tp nằm trong row */
+.grid__row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.grid__col-2-3 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 33.333333%;
+}
+
+
+@keyframes tonext {
+    75% {
+        left: 0;
+    }
+    95% {
+        left: 100%;
+    }
+    98% {
+        left: 100%;
+    }
+    99% {
+        left: 0;
+    }
+}
+
+@keyframes tostart {
+    75% {
+        left: 0;
+    }
+    95% {
+        left: -300%;
+    }
+    98% {
+        left: -300%;
+    }
+    99% {
+        left: 0;
+    }
+}
+
+@keyframes snap {
+    96% {
+        scroll-snap-align: center;
+    }
+    97% {
+        scroll-snap-align: none;
+    }
+    99% {
+        scroll-snap-align: none;
+    }
+    100% {
+        scroll-snap-align: center;
+    }
+}
+
+.carousel *::-webkit-scrollbar {
+    width: 0;
+}
+
+.carousel *::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.carousel *::-webkit-scrollbar-thumb {
+    background: transparent;
+    border: none;
+}
+
+.carousel * {
+    -ms-overflow-style: none;
+}
+
+.carousel :where(ol, li) {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.carousel {
+    position: relative;
+    padding-top: 25%;
+    margin-bottom: 1.5rem;
+    filter: drop-shadow(0 0 10px #0003);
+    perspective: 100px;
+    overflow: hidden;
+}
+
+.carousel__viewport {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    overflow-x: scroll;
+    counter-reset: item;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+}
+
+.carousel__slide {
+    position: relative;
+    flex: 0 0 100%;
+    width: 100%;
+    /* background-color: #f99;
+    counter-increment: item; */
+}
+
+.carousel__slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* .carousel__slide:nth-child(even) {
+    background-color: #99f;
+} */
+
+/* .carousel__slide:before {
+    content: counter(item);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -40%, 70px);
+    color: #fff;
+    font-size: 2em;
+} */
+
+.carousel__snapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    scroll-snap-align: center;
+}
+
+@media (hover: hover) {
+    .carousel__snapper {
+        animation-name: tonext, snap;
+        animation-timing-function: ease;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+    }
+
+    .carousel__slide:last-child .carousel__snapper {
+        animation-name: tostart, snap;
+    }
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .carousel__snapper {
+        animation-name: none;
+    }
+}
+
+.carousel:hover .carousel__snapper,
+.carousel:focus-within .carousel__snapper {
+    animation-name: none;
+}
+
+.carousel__navigation {
+    position: absolute;
+    right: 0;
+    bottom: -0.5rem;
+    left: 0;
+    text-align: center;
+}
+
+.carousel__navigation-list,
+.carousel__navigation-item {
+    display: inline-block;
+}
+
+.carousel__navigation-button {
+    display: inline-block;
+    width: 3rem;
+    height: 1rem;
+    background-color: #333;
+    background-clip: content-box;
+    border: 0.25rem solid transparent;
+    /* border-radius: 50%; */
+    font-size: 0;
+    transition: transform 0.1s;
+}
+
+.carousel::before,
+.carousel::after,
+.carousel__prev,
+.carousel__next {
+    position: absolute;
+    top: calc(50% - 1rem);
+    width: 4rem;
+    height: 4rem;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    font-size: 0;
+    outline: 0;
+    transition: .25s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.carousel::before,
+.carousel__prev {
+    left: 1rem;
+}
+.carousel::after,
+.carousel__next {
+    right: 1rem;
+}
+
+.carousel::before,
+.carousel::after {
+    content: '';
+    z-index: 1;
+    background-color: #33333375;
+    background-size: 1.5rem 1.5rem;
+    background-repeat: no-repeat;
+    background-position: center center;
+    color: #fff;
+    font-size: 2.5rem;
+    line-height: 4rem;
+    text-align: center;
+    pointer-events: none;
+}
+
+.carousel::before {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
+.carousel::after {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
 .flex-container {
     display: flex;
     justify-content: space-between;
@@ -18,8 +449,7 @@
     top: 0;
     z-index: 1000;
     grid-template-columns: 1fr 2fr 1fr;
-    height: 10vh;
-    min-height: 4rem;
+    height: 4rem;
     padding: 0 3rem;
     margin-bottom: .25rem;
     background-color: #fff;
@@ -52,15 +482,15 @@
 }
 
 .navbar-list>li {
-    display: inline-block;
+    display: block;
     height: 100%;
     width: 100%;
 }
 .navbar-list a {
     display: inline-block;
     width: 100%;
-    height: 100%;
-    padding-top: 1.5em;
+    line-height: 4rem;
+    vertical-align: middle;
     text-align: center;
     text-decoration: none;
     color: var(--text);
@@ -70,7 +500,6 @@
 .navbar-list a:hover {
     background-color: var(--primary-shadow);
     color: var(--primary-dark);
-    outline: 2px solid var(--primary);
 }
 .navbar-list a.disabled {
     background-color: var(--primary);
@@ -78,9 +507,8 @@
     pointer-events: none;
 }
 
-/* outlined button recommended setting: <button class="btn color-blue bordered-xxs pad-sm rounded-xs">Button</button> */
-/* filled button recommended setting: <button class="btn filled color-blue pad-sm rounded-xs">Button</button> */
 .btn:not(:disabled) {
+    font-family: var(--exam-font);
     background-color: transparent;
     padding: .325em 1em;
     user-select: none;
@@ -123,12 +551,6 @@
     background-color: var(--primary-dark)
 }
 
-.btn.btn-lg {
-    font-size: 1.25rem;
-    padding: .5rem 1rem;
-    border-radius: .5rem;
-}
-
 .btn.btn-inactive:not(:disabled) {
     background-color: var(--gray);
     color: var(--white);
@@ -165,6 +587,19 @@
 
 .btn.btn-active:not(:disabled):active {
     background-color: var(--secondary-dark);
+}
+
+.btn.btn-lg {
+    font-size: 1.25rem;
+    padding: .5rem 1rem;
+    border-radius: .5rem;
+}
+
+.btn.btn-center {
+    display: block;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer-container {
