--- a/source/css/exam.css
+++ b/source/css/exam.css
@@ -173,22 +173,22 @@ button[type='submit'] {
 .btn>i {
     transition: inherit;
 }
-:where(.btn-prev, .btn-next) {
+:is(.btn-prev, .btn-next) {
     width: 20%;
     font-size: 1.25rem;
-    /* box-shadow: 0 .2rem .4rem #66666650, 0 0 .2rem #333; */
     outline: 2px solid var(--primary);
-    box-shadow: 0 .25rem var(--gray);
+    box-shadow: -.1em .3em var(--primary), .1em .3em var(--primary);
     transition: background-color 0s;
     transition: color 0s;
-    transition: transform 0.05s;
+    /* transition: transform 0.1s; */
 }
 :is(.btn-prev, .btn-next):focus {
+    background-color: var(--primary-shadow);
     outline: 2px solid var(--primary) !important;
 }
-:where(.btn-prev, .btn-next):active {
-    box-shadow: 0 0 var(--gray);
-    transform: translateY(7.5%);
+:is(.btn-prev, .btn-next):active {
+    box-shadow: 0 0 var(--primary);
+    transform: translateY(calc(.3em - 2px));
 }
 
 .nav-btn-container {
