--- a/style.css
+++ b/style.css
@@ -1,34 +1,3 @@
-.earth {
-    background: url(https://d35aaqx5ub95lt.cloudfront.net/images/331a32943ff73be28537dfc7469d5639.svg);
-    background-size: 360px;
-    height: 360px;
-    min-width: 360px;
-    width: 360px;
-}
-#menu {
-    list-style: none;
-    display: flex;
-}
-
-#menu .item {
-    margin: 0px 25px;
-    text-shadow: 0 0 1px #333;
-}
-
-#menu .item a {
-    color: #626A67;
-    text-decoration: none;
-}
-
-
-#actions {
-    display: flex;
-}
-
-#actions .item {
-    margin-left: 22px;
-}
-
 .hero-section {
     /* Thay background thành img */
     background-color: #235390;
@@ -74,77 +43,23 @@
         flex-direction: column;
     }
 }
-
-.to-bottom {
-    position: absolute;
-    bottom: -40px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#wp-products {
-    padding-top: 116px;
-    padding-bottom: 78px;
-    padding-left: 134px;
-    padding-right: 134px;
-}
-
-#wp-products h2 {
+.section-item {
+    padding: 1rem;
+    background: var(--white);
+    border-radius: .5rem;
     text-align: center;
-    margin-bottom: 76px;
-    font-size: 32px;
-    color: #626a67;
+    color: var(--black);
 }
 
-
-#list-products {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-#list-products .item {
-    width: 290px;
-    height: 374px;
-    background: #2e8b8d;
-    border-radius: 10px;
-    margin-bottom: 50px;
-}
-
-#list-products .item img {
+.section-item img {
     display: block;
     margin: 0px auto;
-    margin-top: 17px;
 }
 
-#list-products .item .stars {
-
-    display: flex;
-    margin: 0px auto;
-    width: 50%;
-}
-
-#list-products .item .name {
-    text-align: center;
-    color: #e8ae98;
+.section-item .name {
     font-weight: bold;
-    margin-top: 21px;
+    margin-top: 1rem;
 }
-
-#list-products .item .desc {
-    text-align: center;
-    color: #e8ae98;
-}
-
-#list-products .item .price {
-    text-align: center;
-    color: #f42424;
-    font-weight: bold;
-    margin-top: 20px;
-}
-
 
 .list-page {
     width: 50%;
@@ -210,8 +125,6 @@
 
 
 #comment {
-    width: 1012px;
-    height: 478px;
     margin: 0px auto;
     margin-top: 184px;
     margin-bottom: 50px;
@@ -229,7 +142,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1000px;
     height: 400px;
     list-style: none;
     overflow: hidden;
