--- a/source/css/main.css
+++ b/source/css/main.css
@@ -32,6 +32,7 @@
     font-family: var(--primary-font);
     box-sizing: border-box;
     transition: .1s;
+    line-height: 1.6;
 }
 *::before, *::after {
     box-sizing: inherit;
