--- a/source/css/main.css
+++ b/source/css/main.css
@@ -263,6 +263,9 @@ hr {
     transform: translate(-50%, -50%);
     pointer-events: none;
 }
+.avatar:hover {
+    outline: 5px solid #66666675;
+}
 /* .avatar * {
     color: transparent;
     background-color: transparent;
@@ -280,7 +283,15 @@ hr {
     box-shadow: 0 .5rem .75rem var(--black), 0 0 .5rem var(--gray);
 }
 .dropdown.opened>.dropdown-content {
-    width: max-content;
+    overflow: hidden;
+    position: absolute;
+    min-width: 256px;
+    z-index: 991;
+    right: 0px;
+    margin-right: 4px;
+    max-height: calc(-81px + 100vh);
+    min-height: 256px;
+    max-width: calc(-24px + 100vw);
     padding: 1rem;
     display: block;
     top: 100%;
